re PR tree-optimization/46259 (Revision 166102 failed 416.gamess in SPEC CPU 2006)

gcc/
2010-11-01  Nathan Froyd  <froydnj@codesourcery.com>

	PR tree-optimization/46259

	Revert:

	2010-10-30  Nathan Froyd  <froydnj@codesourcery.com>

	* tree-vect-stmts.c (vect_get_vec_def_for_operand): Use
	build_vector_from_val.

gcc/testsuite/
2010-11-01  H.J. Lu  <hongjiu.lu@intel.com>
	    Nathan Froyd  <froydnj@codesourcery.com>

	PR tree-optimization/46259
	* gfortran.dg/pr46259.f: New testcase.

From-SVN: r166139